--- a/RemioBeta/Base.lproj/Main.storyboard
+++ b/RemioBeta/Base.lproj/Main.storyboard
@@ -123,6 +123,15 @@
                                 </subviews>
                                 <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
                             </view>
+                            <view contentMode="scaleToFill" fixedFrame="YES" translatesAutoresizingMaskIntoConstraints="NO" id="OAt-G9-BAz">
+                                <rect key="frame" x="0.0" y="0.0" width="320" height="568"/>
+                                <subviews>
+                                    <imageView userInteractionEnabled="NO" contentMode="scaleToFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" fixedFrame="YES" image="np5.png" translatesAutoresizingMaskIntoConstraints="NO" id="wsA-Ul-X3S">
+                                        <rect key="frame" x="0.0" y="0.0" width="320" height="568"/>
+                                    </imageView>
+                                </subviews>
+                                <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
+                            </view>
                             <view contentMode="scaleToFill" fixedFrame="YES" translatesAutoresizingMaskIntoConstraints="NO" id="q4y-0j-8Pj">
                                 <rect key="frame" x="0.0" y="0.0" width="320" height="568"/>
                                 <subviews>
@@ -307,15 +316,6 @@
                                 </subviews>
                                 <color key="backgroundColor" white="0.0" alpha="0.0" colorSpace="calibratedWhite"/>
                             </view>
-                            <view contentMode="scaleToFill" fixedFrame="YES" translatesAutoresizingMaskIntoConstraints="NO" id="OAt-G9-BAz">
-                                <rect key="frame" x="0.0" y="0.0" width="320" height="568"/>
-                                <subviews>
-                                    <imageView userInteractionEnabled="NO" contentMode="scaleToFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" fixedFrame="YES" image="p5.png" translatesAutoresizingMaskIntoConstraints="NO" id="wsA-Ul-X3S">
-                                        <rect key="frame" x="0.0" y="0.0" width="320" height="568"/>
-                                    </imageView>
-                                </subviews>
-                                <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
-                            </view>
                         </subviews>
                         <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="calibratedWhite"/>
                     </view>
@@ -349,11 +349,11 @@
         <image name="headphone2.png" width="640" height="1136"/>
         <image name="headphone3.png" width="640" height="1136"/>
         <image name="logoro-01.png" width="1181" height="1181"/>
+        <image name="np5.png" width="640" height="1136"/>
         <image name="p10.png" width="640" height="1136"/>
         <image name="p11.png" width="116" height="114"/>
         <image name="p12.png" width="122" height="123"/>
         <image name="p4.png" width="70" height="124"/>
-        <image name="p5.png" width="640" height="1136"/>
         <image name="p51.png" width="125" height="125"/>
         <image name="p6.png" width="640" height="1136"/>
         <image name="p7.png" width="640" height="1136"/>
