--- a/RemioBeta/Base.lproj/Main.storyboard
+++ b/RemioBeta/Base.lproj/Main.storyboard
@@ -168,33 +168,6 @@
                                 </subviews>
                                 <color key="backgroundColor" white="0.0" alpha="0.0" colorSpace="calibratedWhite"/>
                             </view>
-                            <view contentMode="scaleToFill" fixedFrame="YES" translatesAutoresizingMaskIntoConstraints="NO" id="Y0b-O8-671">
-                                <rect key="frame" x="0.0" y="0.0" width="320" height="568"/>
-                                <subviews>
-                                    <imageView userInteractionEnabled="NO" contentMode="scaleToFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" fixedFrame="YES" image="p10.png" translatesAutoresizingMaskIntoConstraints="NO" id="wME-Kq-Tgl">
-                                        <rect key="frame" x="0.0" y="0.0" width="320" height="568"/>
-                                    </imageView>
-                                    <imageView userInteractionEnabled="NO" contentMode="scaleToFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" fixedFrame="YES" translatesAutoresizingMaskIntoConstraints="NO" id="aKO-nQ-BeF">
-                                        <rect key="frame" x="70" y="100" width="180" height="180"/>
-                                    </imageView>
-                                    <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" fixedFrame="YES" text="Title" textAlignment="center" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="E7p-VE-sIq">
-                                        <rect key="frame" x="8" y="310" width="304" height="21"/>
-                                        <fontDescription key="fontDescription" name="Verdana" family="Verdana" pointSize="17"/>
-                                        <color key="textColor" cocoaTouchSystemColor="darkTextColor"/>
-                                        <nil key="highlightedColor"/>
-                                    </label>
-                                    <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" fixedFrame="YES" text="Artist" textAlignment="center" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="Kef-Df-eu9">
-                                        <rect key="frame" x="8" y="339" width="304" height="21"/>
-                                        <fontDescription key="fontDescription" type="system" pointSize="15"/>
-                                        <color key="textColor" white="0.33333333333333331" alpha="0.80000000000000004" colorSpace="calibratedWhite"/>
-                                        <color key="highlightedColor" red="0.20000000298023224" green="0.20000000298023224" blue="0.20000000298023224" alpha="1" colorSpace="calibratedRGB"/>
-                                    </label>
-                                    <progressView opaque="NO" contentMode="scaleToFill" verticalHuggingPriority="750" fixedFrame="YES" translatesAutoresizingMaskIntoConstraints="NO" id="Eef-0s-N7V">
-                                        <rect key="frame" x="0.0" y="421" width="320" height="2"/>
-                                    </progressView>
-                                </subviews>
-                                <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
-                            </view>
                             <view contentMode="scaleToFill" fixedFrame="YES" translatesAutoresizingMaskIntoConstraints="NO" id="u9o-te-PJx">
                                 <rect key="frame" x="0.0" y="0.0" width="320" height="93"/>
                                 <subviews>
@@ -317,6 +290,60 @@
                                 </subviews>
                                 <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
                             </view>
+                            <view contentMode="scaleToFill" fixedFrame="YES" translatesAutoresizingMaskIntoConstraints="NO" id="Y0b-O8-671">
+                                <rect key="frame" x="0.0" y="0.0" width="320" height="568"/>
+                                <subviews>
+                                    <imageView userInteractionEnabled="NO" contentMode="scaleToFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" fixedFrame="YES" image="p10.png" translatesAutoresizingMaskIntoConstraints="NO" id="wME-Kq-Tgl">
+                                        <rect key="frame" x="0.0" y="0.0" width="320" height="568"/>
+                                    </imageView>
+                                    <imageView userInteractionEnabled="NO" contentMode="scaleToFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" fixedFrame="YES" translatesAutoresizingMaskIntoConstraints="NO" id="aKO-nQ-BeF">
+                                        <rect key="frame" x="70" y="76" width="180" height="180"/>
+                                    </imageView>
+                                    <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" fixedFrame="YES" text="Title" textAlignment="center" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="E7p-VE-sIq">
+                                        <rect key="frame" x="8" y="264" width="304" height="21"/>
+                                        <fontDescription key="fontDescription" name="Verdana-Bold" family="Verdana" pointSize="16"/>
+                                        <color key="textColor" red="0.25098040699958801" green="0.0" blue="0.50196081399917603" alpha="1" colorSpace="calibratedRGB"/>
+                                        <nil key="highlightedColor"/>
+                                    </label>
+                                    <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" fixedFrame="YES" text="Artist" textAlignment="center" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="Kef-Df-eu9">
+                                        <rect key="frame" x="8" y="285" width="304" height="21"/>
+                                        <fontDescription key="fontDescription" type="system" pointSize="15"/>
+                                        <color key="textColor" white="0.33333333333333331" alpha="0.80000000000000004" colorSpace="calibratedWhite"/>
+                                        <color key="highlightedColor" red="0.20000000298023224" green="0.20000000298023224" blue="0.20000000298023224" alpha="1" colorSpace="calibratedRGB"/>
+                                    </label>
+                                    <progressView opaque="NO" contentMode="scaleToFill" verticalHuggingPriority="750" fixedFrame="YES" translatesAutoresizingMaskIntoConstraints="NO" id="Eef-0s-N7V">
+                                        <rect key="frame" x="0.0" y="421" width="320" height="2"/>
+                                    </progressView>
+                                    <button opaque="NO" contentMode="scaleToFill" fixedFrame="YES" contentHorizontalAlignment="center" contentVerticalAlignment="center" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="gmu-Rr-tbN">
+                                        <rect key="frame" x="70" y="329" width="18" height="19"/>
+                                        <state key="normal" image="yxplayback.png">
+                                            <color key="titleShadowColor" white="0.5" alpha="1" colorSpace="calibratedWhite"/>
+                                        </state>
+                                        <connections>
+                                            <action selector="playAmusicBack:" destination="vXZ-lx-hvc" eventType="touchUpInside" id="F5t-yo-sYG"/>
+                                        </connections>
+                                    </button>
+                                    <button opaque="NO" contentMode="scaleToFill" fixedFrame="YES" contentHorizontalAlignment="center" contentVerticalAlignment="center" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="OWL-1D-kQO">
+                                        <rect key="frame" x="143" y="321" width="35" height="35"/>
+                                        <state key="normal" image="yxplay.png">
+                                            <color key="titleShadowColor" white="0.5" alpha="1" colorSpace="calibratedWhite"/>
+                                        </state>
+                                        <connections>
+                                            <action selector="playorPauseAmusic:" destination="vXZ-lx-hvc" eventType="touchUpInside" id="eA2-qH-KXx"/>
+                                        </connections>
+                                    </button>
+                                    <button opaque="NO" contentMode="scaleToFill" fixedFrame="YES" contentHorizontalAlignment="center" contentVerticalAlignment="center" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="ddd-Or-Ndf">
+                                        <rect key="frame" x="232" y="329" width="18" height="19"/>
+                                        <state key="normal" image="yxplaynext.png">
+                                            <color key="titleShadowColor" white="0.5" alpha="1" colorSpace="calibratedWhite"/>
+                                        </state>
+                                        <connections>
+                                            <action selector="playAmusicNext:" destination="vXZ-lx-hvc" eventType="touchUpInside" id="hMM-oz-kBh"/>
+                                        </connections>
+                                    </button>
+                                </subviews>
+                                <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
+                            </view>
                             <view contentMode="scaleToFill" fixedFrame="YES" translatesAutoresizingMaskIntoConstraints="NO" id="Bqd-L2-IJu">
                                 <rect key="frame" x="0.0" y="525" width="320" height="43"/>
                                 <subviews>
@@ -373,6 +400,7 @@
                         <outlet property="page8View" destination="NBT-FC-Tnt" id="9qz-3A-amx"/>
                         <outlet property="page9View" destination="cZD-cX-cFh" id="gCv-Cz-pv0"/>
                         <outlet property="playAlbumImage" destination="aKO-nQ-BeF" id="h7R-eB-AOc"/>
+                        <outlet property="playAmusicBtn" destination="OWL-1D-kQO" id="6bX-EP-QyM"/>
                         <outlet property="playProgress" destination="Eef-0s-N7V" id="0vw-Q2-Jzc"/>
                         <outlet property="playRecordBtn" destination="jEe-f7-MIQ" id="i3Q-wZ-Qkn"/>
                         <outlet property="recordMixBtn" destination="g66-ux-gnk" id="Fx5-JO-XOY"/>
@@ -409,6 +437,9 @@
         <image name="page7p7.png" width="640" height="1136"/>
         <image name="page8p8.png" width="2667" height="4733"/>
         <image name="pagep9.png" width="640" height="1136"/>
+        <image name="yxplay.png" width="321" height="321"/>
+        <image name="yxplayback.png" width="125" height="138"/>
+        <image name="yxplaynext.png" width="125" height="138"/>
         <image name="z1.png" width="119" height="125"/>
         <image name="z3.png" width="108" height="124"/>
         <image name="未标题-2.png" width="124" height="124"/>
